// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Modal ClickOutside play-test: shadow DOM 1`] = `
<dialog part="dialog">
  <header>
    <slot name="title">
    </slot>
    <button type="button"
            part="close"
            aria-label="Close"
            autofocus
    >
      X
    </button>
  </header>
  <slot>
  </slot>
</dialog>
`;

exports[`components/Modal Main play-test: shadow DOM 1`] = `
<dialog part="dialog"
        open
>
  <header>
    <slot name="title">
    </slot>
    <button type="button"
            part="close"
            aria-label="Close"
            autofocus
    >
      X
    </button>
  </header>
  <slot>
  </slot>
</dialog>
`;
